# ReuseCache

./: .gitignore  analyse.py  analyse_ml.py  build_reuse_cache.sh  download_spec2k17.sh  new_analyzer.py  new_spec_analyzer.py  reuse_analysis.txt  reuse_analysis_ml.txt  run_ml_traces.sh  run_ml_traces_cmd.sh  run_reuse_cache.sh  run_spec_traces.sh  sample_trace_reader.py
ConventionalCache/: run_cache.sh
ConventionalCache/inc/: cache.h  champsim.h  ooo_cpu.h
ConventionalCache/replacement/: base_replacement.cc
ConventionalCache/src/: cache.cc  main.cc  ooo_cpu.cc  page_table_walker.cc
ConventionalCache/tracer/: champsim_tracer.cpp
ConventionalCacheWithData/: Makefile  build_cache.sh  run_cache.sh
ConventionalCacheWithData/inc/: block.h  cache.h  champsim.h  dram_controller.h  instruction.h  ooo_cpu.h  set.h
ConventionalCacheWithData/replacement/: base_replacement.cc
ConventionalCacheWithData/src/: block.cc  cache.cc  dram_controller.cc  main.cc  ooo_cpu.cc  page_table_walker.cc
ONNX-Runtime-Inference/: CMakeLists.txt  generate_traces.sh  list_physical_cores.sh
ONNX-Runtime-Inference/data/: download_models.sh
ONNX-Runtime-Inference/docker/: onnxruntime-cuda-python.Dockerfile  onnxruntime-cuda.Dockerfile
ONNX-Runtime-Inference/src/: inference.cpp
ReuseCache/: run_reuse_cache.sh
ReuseCacheWithData/: Makefile  run_reuse_cache.sh
inc/: cache.h  champsim.h  instruction.h  ooo_cpu.h  reuse_cache_llc.h  uncore.h
src/: cache.cc  main.cc  ooo_cpu.cc  reuse_cache_llc.cc  uncore.cc
tracer/: champsim_tracer.cpp  trace_tester_main.cpp
(+46 files in other folders)
